--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "html-webpack-plugin": "^3.2.0",
     "style-loader": "^0.21.0",
     "url-loader": "^1.0.1",
+    "vue-loader": "^15.2.4",
+    "vue-template-compiler": "^2.5.16",
     "webpack": "^4.10.1",
     "webpack-cli": "^2.1.4",
     "webpack-dev-middleware": "^3.1.3",
